# union-agent-SFBE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: logging_config.py  main.py  scheduler.py
app/api/routes/: sf_callback.py  sf_dashboard.py  sf_outbound.py
app/clients/: __init__.py  kingdee.py
app/config/: __init__.py
app/db/: pool.py
app/middleware/: access_log.py
app/services/: sf_automation.py  sf_item_push.py  sf_outbound.py  wecom_client.py
deploy/: nginx-sf-service.nginx
