[project]
name = "union-agent-sfbe"
version = "0.1.0"
description = "Independent Union Shunfeng WMS backend service"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.6,<0.116",
  "httpx[socks]>=0.27.2",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.2.1",
  "python-json-logger>=3.0.0",
  "pycryptodome>=3.21.0",
  "uvicorn[standard]>=0.34.0,<0.35",
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.0",
  "ruff>=0.8.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
